# shutdowner

./: README.md  main.py  pyproject.toml
api/: __init__.py
api/v1/: __init__.py  endpoints.py
configurators/: jun_configurator.py
core/: handler.py  logger.py  mt_bot.py  redis_client.py  scheduler.py
db/: __init__.py  init_db.py  models.py  service_repository.py  session.py  sql_repository.py
dependencies/: __init__.py  click_repo.py  cmdb.py  http_interface.py
items/: schemas.py
network/: connection.py
services/: services.py
