[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["standart"], version = "^0.32.1"}
pydantic = {extras = ["email"], version = "^2.10.1"}
pydantic-settings = "^2.6.1"
clickhouse-driver = "^0.2.9"
pyyaml = "^6.0.2"
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
aiohttp = "3.11.7"
starlette-admin = "^0.14.1"
arq = "^0.26.1"
mailru-im-bot = "^0.0.21"
ncclient = "^0.6.16"
psycopg2-binary = "^2.9.10"
netmiko = "^4.4.0"
httpx = "^0.27.2"

